--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,3 +1,6 @@
 spring:
   application:
-    name: config-server
+    name: category-service
+  cloud:
+    config:
+      uri: http://localhost:8888/
