--- a/build.gradle
+++ b/build.gradle
@@ -3,34 +3,26 @@ buildscript {
     ext { springBootVersion = '1.4.1.RELEASE' }
     repositories {
         jcenter()
-        mavenLocal()
-        mavenCentral()
-        maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
     }
     dependencies {
         // for spring boot
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 
         classpath "io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE"
-        //for docker build
-        classpath('se.transmode.gradle:gradle-docker:1.2')
-
-        // for unit test code coverage  -- need to find a way to put it in its file
-        classpath('com.palantir:jacoco-coverage:0.4.0')
     }
 }
 
 //for spring boot
 apply plugin: 'application'
+apply plugin: 'java'
+//for spring cloud
+apply plugin: "io.spring.dependency-management"
 
 repositories {
     maven {
         url 'https://repo.spring.io/libs-milestone'
     }
 }
-
-//for spring cloud
-apply plugin: "io.spring.dependency-management"
 
 dependencyManagement {
     imports {
