--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
 
 buildscript {
-    ext { springBootVersion = '1.4.1.RELEASE' }
     repositories {
         jcenter()
     }
     dependencies {
         // for spring boot
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.1.RELEASE")
 
         classpath "io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE"
+
+        // for unit test code coverage  -- need to find a way to put it in its file
+        classpath('com.palantir:jacoco-coverage:0.4.0')
     }
 }
 
@@ -47,5 +49,6 @@ dependencies {
     testCompile('org.spockframework:spock-spring:1.0-groovy-2.4')
 }
 
+apply from: 'test_coverage.gradle'
 mainClassName = 'io.reactivesw.config.Application'
 
