--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,6 +1,3 @@
 spring:
   application:
-    name: category-service
-  cloud:
-    config:
-      uri: http://localhost:8888/
+    name: config-service
