--- a/build.gradle
+++ b/build.gradle
@@ -1,51 +1,38 @@
-
 buildscript {
+    ext {
+        // specify the spring boot gradle plugin version
+        springBootVersion = '1.5.2.RELEASE'
+    }
     repositories {
         jcenter()
+        mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         // for spring boot
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.1.RELEASE")
-
-        classpath "io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE"
-
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE")
+        //for docker build
+        classpath('se.transmode.gradle:gradle-docker:1.2')
         // for unit test code coverage  -- need to find a way to put it in its file
         classpath('com.palantir:jacoco-coverage:0.4.0')
+
     }
 }
 
-//for spring boot
-apply plugin: 'application'
-apply plugin: 'java'
-//for spring cloud
-apply plugin: "io.spring.dependency-management"
+apply from: 'build_scripts/build_setups.gradle'
 
-repositories {
-    maven {
-        url 'https://repo.spring.io/libs-milestone'
-    }
-}
+apply from: 'build_scripts/application_version.gradle'
 
-dependencyManagement {
-    imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Camden.SR5'
-    }
-}
+apply from: 'build_scripts/application_dependencies.gradle'
 
-dependencies {
-    compile("org.springframework.cloud:spring-cloud-config-server")
-    //spring boot test
-    testCompile('org.springframework.boot:spring-boot-starter-test:1.4.0.RELEASE')
+apply from: 'build_scripts/docker_build.gradle'
 
-    //groovy for spock
-    testCompile('org.codehaus.groovy:groovy-all:2.4.1')
-
-    //spock core
-    testCompile('org.spockframework:spock-core:1.0-groovy-2.4')
-
-    //spock spring
-    testCompile('org.spockframework:spock-spring:1.0-groovy-2.4')
-}
-
-mainClassName = 'io.reactivesw.config.Application'
+//for code quality assurance
+//apply from: 'build_scripts/quality_assurance/checkstyle.gradle'
+//apply from: 'build_scripts/quality_assurance/findbugs.gradle'
+//apply from: 'build_scripts/quality_assurance/pmd.gradle'
+//apply from: 'build_scripts/quality_assurance/test_coverage.gradle'
 
