--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ services:
 script:
   - ./gradlew clean
   - ./gradlew build
+  - ./gradlew build buildDocker --info
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+  - sh ./deploy/docker_pusher.sh
