fix docker image bug

--- a/build_scripts/build_setups.gradle
+++ b/build_scripts/build_setups.gradle
@@ -1,14 +1,16 @@
 // This should be the first `apply from` file.
+
+//for spring boot
+apply plugin: 'application'
+apply plugin: 'org.springframework.boot'
+//for spring cloud
+apply plugin: "io.spring.dependency-management"
+
 repositories {
-    jcenter()
-    mavenCentral()
-    // For spring config `M1`
     maven {
         url 'https://repo.spring.io/libs-milestone'
     }
 }
-apply plugin: "io.spring.dependency-management"
-apply plugin: 'java'
 
 dependencyManagement {
     imports {
@@ -16,12 +18,6 @@ dependencyManagement {
     }
 }
 
-compileJava {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
-}
-
-// Specify the gradle wrapper version
 task wrapper(type: Wrapper) {
     gradleVersion = '3.1'
 }
