--- a/build.gradle
+++ b/build.gradle
@@ -3,22 +3,17 @@ buildscript {
         // specify the spring boot gradle plugin version
         springBootVersion = '1.5.2.RELEASE'
     }
+
     repositories {
         jcenter()
-        mavenCentral()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
     }
     dependencies {
         // for spring boot
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE")
+
+        classpath "io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE"
         //for docker build
         classpath('se.transmode.gradle:gradle-docker:1.2')
-        // for unit test code coverage  -- need to find a way to put it in its file
-        classpath('com.palantir:jacoco-coverage:0.4.0')
-
     }
 }
 
